css/loading.css
#loadingOverlay
{
    position: absolute;
    left:     0;
    top:      0;
    width:    100%;
    height:   100%;
    display:  none;
}


.figma-light #loadingOverlay { background: #f0f0f0; } /* my tuning of bg-tertiary */
.figma-dark  #loadingOverlay { background: #1e1e1e; }


#loadingGraphic
{
    font-family: Inter;
    font-size:   26;
    font-weight: 800;
    color:       var(--figma-color-text);/*#333;*/
    position:    absolute;
    left:        50%;
    top:         50%;
    width:       184px;
    height:       64px;
    transform:   translateX(-50%)
                 translateY(-50%);
    /* box-shadow:  0 0 0 1px red inset; */
}


.figma-light #loadingGraphic { font-weight: 800; }
.figma-dark  #loadingGraphic { font-weight: 600; }


#loadingG 
{
    position:  absolute;
    left:      50%;
    top:       40%;
    transform: translateX(-50%)
               translateY(-50%);
}

#loadingEmpty, #loadingFull
{
    position:  absolute;
    left:      calc(50% - 4px);
    top:       calc(40% - 4px);
}

#loadingG     > path { fill: var(--figma-color-text);            }

#loadingEmpty        { animation: emptyOrbit 5s linear infinite; }
#loadingEmpty > path { fill:var(--figma-color-text);             }

#loadingFull         { animation: fullOrbit 5s linear infinite;  }
#loadingFull  > path { fill: var(--figma-color-text);            }


@keyframes emptyOrbit
{
      0%   { transform: rotate(   0deg) translate(-20px) scale(100%);  opacity: 100%; }
     10%   { transform: rotate(-170deg) translate(-20px) scale(100%);  opacity: 100%; }
     11.3% { transform: rotate(-180deg) translate(-20px) scale(130%);  opacity: 100%; }
     15.3% { transform: rotate(-180deg) translate(-20px) scale(130%);  opacity: 100%; }
     20%   { transform: rotate(-180deg) translate(-20px) scale( 50%);  opacity:   0%; }
     23.4% { transform: rotate(-360deg) translate(-20px) scale(150%);  opacity:   0%; }
     26.7% { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
     50%   { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
     62%   { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
     63.3% { transform: rotate(-360deg) translate(-20px) scale(130%);  opacity: 100%; }
     65.3% { transform: rotate(-360deg) translate(-20px) scale(130%);  opacity: 100%; }
     68%   { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
     73.3% { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
     80%   { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
    100%   { transform: rotate(-360deg) translate(-20px) scale(100%);  opacity: 100%; }
}


@keyframes fullOrbit
{
      0%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     12%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     12.7% { transform: rotate(   0deg) translate(20px) scale( 75%);  opacity: 100%; }
     13.3% { transform: rotate(   0deg) translate(20px) scale( 75%);  opacity: 100%; }
     22%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     23.4% { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     30%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     50%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
     62%   { transform: rotate(-170deg) translate(20px) scale(100%);  opacity: 100%; }
     63.3% { transform: rotate(-180deg) translate(20px) scale( 50%);  opacity: 100%; }
     65.3% { transform: rotate(-180deg) translate(20px) scale( 50%);  opacity: 100%; }
     68%   { transform: rotate(-180deg) translate(20px) scale(  0%);  opacity:   0%; }
     73.4% { transform: rotate(   0deg) translate(20px) scale( 80%);  opacity:   0%; }
     76.7% { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
    100%   { transform: rotate(   0deg) translate(20px) scale(100%);  opacity: 100%; }
}


#loadingBar
{
    position:      absolute;
    left:          50%;
    bottom:          0;
    transform:     translateX(-50%)
                   translateY(-50%);
    width:         180px;
    height:        5px;
    border-radius: 2.5px;
    overflow:      hidden;
    /* box-shadow:    0 0 0 1px yellow inset; */
}


.figma-light #loadingBar { background: white; }
.figma-dark  #loadingBar { background: var(--figma-color-bg-tertiary); }


#loadingProgress
{
    position:      absolute;
    left:          0;
    top:           0;
    width:         0;
    height:        5px;
    background:    var(--figma-color-text);
}


#chkLoadingRestart
{
    position:   absolute;
    left:       49.5%;
    top:        calc(64.5% + 0.5px);
    transform:  translateX(-50%)
                translateY(-50%);
    display:    none;
}

